--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,66 @@
   text-align: center;
 }
 
+.home {
+  width: 100%;
+  height: 100vh;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #e5e5f5;
+}
+
+.home .form {
+  width: 30%;
+  background-color: #efeff4;
+  padding: 20px;
+}
+
+.home .list {
+  width: 60%;
+  background-color: #efeff4;
+  padding: 20px;
+}
+
+@media (max-width: 1000px) {
+  .home {
+    height: 100%;
+    flex-direction: column;
+    padding: 5% 0;
+  }
+  
+  .home .form {
+    width: 70%;
+    margin: 20px 0;
+  }
+  
+  .home .list {
+    width: 70%;
+    background-color: #efeff4;
+    padding: 20px;
+  }
+}
+
+@media (max-width: 500px) {
+  .home {
+    height: 100%;
+    flex-direction: column;
+    padding: 5% 0;
+  }
+  
+  .home .form {
+    width: 90%;
+    margin: 20px 0;
+  }
+  
+  .home .list {
+    width: 90%;
+    background-color: #efeff4;
+    padding: 20px;
+  }
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
